# debounced_button

./: .gitignore  .justfile  .pre-commit-config.yaml  CMakeLists.txt  gcovr.cfg  makefile  readme.md
.github/workflows/: unit-test.yml
cmake/: CPM.cmake  dependencies.cmake  project_options.cmake
docs/: timings.md
include/: debounced_button.h
src/: debounced_button.c  debounced_button.h
test/: main.cpp  test_debounced_button.c  test_debounced_button.cpp
